Optimized tests in DaoTest
Signed-off-by: Christian Banse <christian.banse@aisec.fraunhofer.de>